parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT
    PRINT

Grammar

Rule 0     S' -> PROGRAM_RULE
Rule 1     empty -> <empty>
Rule 2     PROGRAM_RULE -> PROGRAM ID SEMICOLON VARS BODY MAIN
Rule 3     MAIN_RULE -> MAIN LPAREN RPAREN LCURLY STATEMENTS RCURLY
Rule 4     BODY -> FUNCTION_RULE BODY
Rule 5     BODY -> empty
Rule 6     TYPE -> INT
Rule 7     TYPE -> FLOAT
Rule 8     TYPE -> CHAR
Rule 9     VARS -> LET TYPE COLON ID_LIST SEMICOLON VARS
Rule 10    VARS -> empty
Rule 11    ID_LIST -> ID ID_LIST_AUX
Rule 12    ID_LIST -> MULTIDIMENSIONAL ID_LIST_AUX
Rule 13    ID_LIST_AUX -> COMMA ID_LIST
Rule 14    ID_LIST_AUX -> empty
Rule 15    FUNCTION_RULE -> FUNCTION_AUX FUNCTION ID LPAREN PARAM RPAREN FUNCTION_BODY
Rule 16    FUNCTION_AUX -> TYPE
Rule 17    FUNCTION_AUX -> VOID
Rule 18    MULTIDIMENSIONAL -> ID LBRACKET CTEI RBRACKET
Rule 19    MULTIDIMENSIONAL -> ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
Rule 20    PARAM -> TYPE ID PARAM_AUX
Rule 21    PARAM -> empty
Rule 22    PARAM_AUX -> COMMA PARAM_AUX2
Rule 23    PARAM_AUX -> empty
Rule 24    PARAM_AUX2 -> TYPE ID PARAM_AUX
Rule 25    FUNCTION_BODY -> VARS LCURLY STATEMENTS FUNCTION_BODY_AUX RCURLY
Rule 26    FUNCTION_BODY_AUX -> FUNCTION_RETURN
Rule 27    FUNCTION_BODY_AUX -> empty
Rule 28    STATEMENTS -> STATEMENTS_AUX
Rule 29    STATEMENTS -> empty
Rule 30    STATEMENTS_AUX -> ASSIGNMENT STATEMENTS
Rule 31    STATEMENTS_AUX -> FUNCTION_CALL STATEMENTS
Rule 32    STATEMENTS_AUX -> READ_RULE STATEMENTS
Rule 33    STATEMENTS_AUX -> WRITE STATEMENTS
Rule 34    STATEMENTS_AUX -> IF_RULE STATEMENTS
Rule 35    STATEMENTS_AUX -> WHILE_RULE STATEMENTS
Rule 36    STATEMENTS_AUX -> FOR_RULE STATEMENTS
Rule 37    ASSIGNMENT -> VAR EQUALS EXPRESSION SEMICOLON
Rule 38    FUNCTION_CALL -> ID LPAREN EXPRESSION FUNCTION_CALL_AUX RPAREN SEMICOLON
Rule 39    FUNCTION_CALL_AUX -> COMMA EXPRESSION FUNCTION_CALL_AUX
Rule 40    FUNCTION_CALL_AUX -> empty
Rule 41    READ_RULE -> READ LPAREN VAR READ_AUX RPAREN SEMICOLON
Rule 42    READ_AUX -> COMMA VAR READ_AUX
Rule 43    READ_AUX -> empty
Rule 44    WRITE_RULE -> WRITE LPAREN WRITE_AUX WRITE_AUX2 RPAREN SEMICOLON
Rule 45    WRITE_AUX -> CTESTRING
Rule 46    WRITE_AUX -> EXPRESSION
Rule 47    WRITE_AUX2 -> COMMA WRITE_AUX WRITE_AUX2
Rule 48    WRITE_AUX2 -> empty
Rule 49    VAR -> ID
Rule 50    VAR -> ID LBRACKET EXPRESSION RBRACKET
Rule 51    VAR -> ID LBRACKET EXPRESSION RBRACKET LBRACKET EXPRESSION RBRACKET
Rule 52    FUNCTION_RETURN -> RETURN EXPRESSION SEMICOLON
Rule 53    IF_RULE -> IF LPAREN EXPRESSION RPAREN LCURLY STATEMENTS RCURLY ELSE LCURLY STATEMENTS RCURLY
Rule 54    WHILE_RULE -> WHILE LPAREN EXPRESSION RPAREN LCURLY STATEMENTS RCURLY
Rule 55    FOR_RULE -> FOR LPAREN VAR EQUALS EXPRESSION TO EXPRESSION RPAREN LCURLY STATEMENTS RCURLY
Rule 56    EXPRESSION -> AND_EXPRESSION EXPRESSION_AUX
Rule 57    EXPRESSION_AUX -> OR EXPRESSION
Rule 58    EXPRESSION_AUX -> empty
Rule 59    AND_EXPRESSION -> COMPARE_EXPRESSION AND_EXPRESSION_AUX
Rule 60    AND_EXPRESSION_AUX -> AND AND_EXPRESSION
Rule 61    AND_EXPRESSION_AUX -> empty
Rule 62    COMPARE_EXPRESSION -> ARITHMETIC_EXPRESSION COMPARE_EXPRESSION_AUX ARITHMETIC_EXPRESSION
Rule 63    COMPARE_EXPRESSION_AUX -> COMPARE_EXPRESSION_AUX2 ARITHMETIC_EXPRESSION
Rule 64    COMPARE_EXPRESSION_AUX2 -> LESSTHAN
Rule 65    COMPARE_EXPRESSION_AUX2 -> GREATERTHAN
Rule 66    COMPARE_EXPRESSION_AUX2 -> DOUBLEEQUALS
Rule 67    COMPARE_EXPRESSION_AUX2 -> NOTEQUALS
Rule 68    ARITHMETIC_EXPRESSION -> TERM ARITHMETIC_EXPRESSION_AUX
Rule 69    ARITHMETIC_EXPRESSION_AUX -> ARITHMETIC_EXPRESSION_AUX2 ARITHMETIC_EXPRESSION
Rule 70    ARITHMETIC_EXPRESSION_AUX -> empty
Rule 71    ARITHMETIC_EXPRESSION_AUX2 -> PLUS
Rule 72    ARITHMETIC_EXPRESSION_AUX2 -> MINUS
Rule 73    TERM -> FACTOR TERM_AUX
Rule 74    TERM_AUX -> TERM_AUX2 TERM
Rule 75    TERM_AUX -> empty
Rule 76    TERM_AUX2 -> MULTIPLY
Rule 77    TERM_AUX2 -> DIVIDE
Rule 78    FACTOR -> LPAREN EXPRESSION RPAREN
Rule 79    FACTOR -> CTEI
Rule 80    FACTOR -> CTESTRING
Rule 81    FACTOR -> CTEF
Rule 82    FACTOR -> VAR
Rule 83    FACTOR -> FUNCTION_CALL

Terminals, with rules where they appear

AND                  : 60
CHAR                 : 8
COLON                : 9
COMMA                : 13 22 39 42 47
COMMENT              : 
CTEF                 : 81
CTEI                 : 18 19 19 79
CTESTRING            : 45 80
DIVIDE               : 77
DOT                  : 
DOUBLEEQUALS         : 66
ELSE                 : 53
EQUALS               : 37 55
FLOAT                : 7
FOR                  : 55
FUNCTION             : 15
GREATERTHAN          : 65
ID                   : 2 11 15 18 19 20 24 38 49 50 51
IF                   : 53
INT                  : 6
LBRACKET             : 18 19 19 50 51 51
LCURLY               : 3 25 53 53 54 55
LESSTHAN             : 64
LET                  : 9
LPAREN               : 3 15 38 41 44 53 54 55 78
MAIN                 : 2 3
MINUS                : 72
MULTIPLY             : 76
NOTEQUALS            : 67
OR                   : 57
PLUS                 : 71
PRINT                : 
PROGRAM              : 2
RBRACKET             : 18 19 19 50 51 51
RCURLY               : 3 25 53 53 54 55
READ                 : 41
RETURN               : 52
RPAREN               : 3 15 38 41 44 53 54 55 78
SEMICOLON            : 2 9 37 38 41 44 52
TO                   : 55
VOID                 : 17
WHILE                : 54
WRITE                : 33 44
error                : 

Nonterminals, with rules where they appear

AND_EXPRESSION       : 56 60
AND_EXPRESSION_AUX   : 59
ARITHMETIC_EXPRESSION : 62 62 63 69
ARITHMETIC_EXPRESSION_AUX : 68
ARITHMETIC_EXPRESSION_AUX2 : 69
ASSIGNMENT           : 30
BODY                 : 2 4
COMPARE_EXPRESSION   : 59
COMPARE_EXPRESSION_AUX : 62
COMPARE_EXPRESSION_AUX2 : 63
EXPRESSION           : 37 38 39 46 50 51 51 52 53 54 55 55 57 78
EXPRESSION_AUX       : 56
FACTOR               : 73
FOR_RULE             : 36
FUNCTION_AUX         : 15
FUNCTION_BODY        : 15
FUNCTION_BODY_AUX    : 25
FUNCTION_CALL        : 31 83
FUNCTION_CALL_AUX    : 38 39
FUNCTION_RETURN      : 26
FUNCTION_RULE        : 4
ID_LIST              : 9 13
ID_LIST_AUX          : 11 12
IF_RULE              : 34
MAIN_RULE            : 
MULTIDIMENSIONAL     : 12
PARAM                : 15
PARAM_AUX            : 20 24
PARAM_AUX2           : 22
PROGRAM_RULE         : 0
READ_AUX             : 41 42
READ_RULE            : 32
STATEMENTS           : 3 25 30 31 32 33 34 35 36 53 53 54 55
STATEMENTS_AUX       : 28
TERM                 : 68 74
TERM_AUX             : 73
TERM_AUX2            : 74
TYPE                 : 9 16 20 24
VAR                  : 37 41 42 55 82
VARS                 : 2 9 25
WHILE_RULE           : 35
WRITE_AUX            : 44 47
WRITE_AUX2           : 44 47
WRITE_RULE           : 
empty                : 5 10 14 21 23 27 29 40 43 48 58 61 70 75

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM_RULE
    (2) PROGRAM_RULE -> . PROGRAM ID SEMICOLON VARS BODY MAIN

    PROGRAM         shift and go to state 2

    PROGRAM_RULE                   shift and go to state 1

state 1

    (0) S' -> PROGRAM_RULE .



state 2

    (2) PROGRAM_RULE -> PROGRAM . ID SEMICOLON VARS BODY MAIN

    ID              shift and go to state 3


state 3

    (2) PROGRAM_RULE -> PROGRAM ID . SEMICOLON VARS BODY MAIN

    SEMICOLON       shift and go to state 4


state 4

    (2) PROGRAM_RULE -> PROGRAM ID SEMICOLON . VARS BODY MAIN
    (9) VARS -> . LET TYPE COLON ID_LIST SEMICOLON VARS
    (10) VARS -> . empty
    (1) empty -> .

    LET             shift and go to state 6
    VOID            reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    CHAR            reduce using rule 1 (empty -> .)
    MAIN            reduce using rule 1 (empty -> .)

    VARS                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (2) PROGRAM_RULE -> PROGRAM ID SEMICOLON VARS . BODY MAIN
    (4) BODY -> . FUNCTION_RULE BODY
    (5) BODY -> . empty
    (15) FUNCTION_RULE -> . FUNCTION_AUX FUNCTION ID LPAREN PARAM RPAREN FUNCTION_BODY
    (1) empty -> .
    (16) FUNCTION_AUX -> . TYPE
    (17) FUNCTION_AUX -> . VOID
    (6) TYPE -> . INT
    (7) TYPE -> . FLOAT
    (8) TYPE -> . CHAR

    MAIN            reduce using rule 1 (empty -> .)
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    BODY                           shift and go to state 8
    FUNCTION_RULE                  shift and go to state 9
    empty                          shift and go to state 10
    FUNCTION_AUX                   shift and go to state 11
    TYPE                           shift and go to state 12

state 6

    (9) VARS -> LET . TYPE COLON ID_LIST SEMICOLON VARS
    (6) TYPE -> . INT
    (7) TYPE -> . FLOAT
    (8) TYPE -> . CHAR

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    TYPE                           shift and go to state 17

state 7

    (10) VARS -> empty .

    VOID            reduce using rule 10 (VARS -> empty .)
    INT             reduce using rule 10 (VARS -> empty .)
    FLOAT           reduce using rule 10 (VARS -> empty .)
    CHAR            reduce using rule 10 (VARS -> empty .)
    MAIN            reduce using rule 10 (VARS -> empty .)
    LCURLY          reduce using rule 10 (VARS -> empty .)


state 8

    (2) PROGRAM_RULE -> PROGRAM ID SEMICOLON VARS BODY . MAIN

    MAIN            shift and go to state 18


state 9

    (4) BODY -> FUNCTION_RULE . BODY
    (4) BODY -> . FUNCTION_RULE BODY
    (5) BODY -> . empty
    (15) FUNCTION_RULE -> . FUNCTION_AUX FUNCTION ID LPAREN PARAM RPAREN FUNCTION_BODY
    (1) empty -> .
    (16) FUNCTION_AUX -> . TYPE
    (17) FUNCTION_AUX -> . VOID
    (6) TYPE -> . INT
    (7) TYPE -> . FLOAT
    (8) TYPE -> . CHAR

    MAIN            reduce using rule 1 (empty -> .)
    VOID            shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    FUNCTION_RULE                  shift and go to state 9
    BODY                           shift and go to state 19
    empty                          shift and go to state 10
    FUNCTION_AUX                   shift and go to state 11
    TYPE                           shift and go to state 12

state 10

    (5) BODY -> empty .

    MAIN            reduce using rule 5 (BODY -> empty .)


state 11

    (15) FUNCTION_RULE -> FUNCTION_AUX . FUNCTION ID LPAREN PARAM RPAREN FUNCTION_BODY

    FUNCTION        shift and go to state 20


state 12

    (16) FUNCTION_AUX -> TYPE .

    FUNCTION        reduce using rule 16 (FUNCTION_AUX -> TYPE .)


state 13

    (17) FUNCTION_AUX -> VOID .

    FUNCTION        reduce using rule 17 (FUNCTION_AUX -> VOID .)


state 14

    (6) TYPE -> INT .

    FUNCTION        reduce using rule 6 (TYPE -> INT .)
    COLON           reduce using rule 6 (TYPE -> INT .)
    ID              reduce using rule 6 (TYPE -> INT .)


state 15

    (7) TYPE -> FLOAT .

    FUNCTION        reduce using rule 7 (TYPE -> FLOAT .)
    COLON           reduce using rule 7 (TYPE -> FLOAT .)
    ID              reduce using rule 7 (TYPE -> FLOAT .)


state 16

    (8) TYPE -> CHAR .

    FUNCTION        reduce using rule 8 (TYPE -> CHAR .)
    COLON           reduce using rule 8 (TYPE -> CHAR .)
    ID              reduce using rule 8 (TYPE -> CHAR .)


state 17

    (9) VARS -> LET TYPE . COLON ID_LIST SEMICOLON VARS

    COLON           shift and go to state 21


state 18

    (2) PROGRAM_RULE -> PROGRAM ID SEMICOLON VARS BODY MAIN .

    $end            reduce using rule 2 (PROGRAM_RULE -> PROGRAM ID SEMICOLON VARS BODY MAIN .)


state 19

    (4) BODY -> FUNCTION_RULE BODY .

    MAIN            reduce using rule 4 (BODY -> FUNCTION_RULE BODY .)


state 20

    (15) FUNCTION_RULE -> FUNCTION_AUX FUNCTION . ID LPAREN PARAM RPAREN FUNCTION_BODY

    ID              shift and go to state 22


state 21

    (9) VARS -> LET TYPE COLON . ID_LIST SEMICOLON VARS
    (11) ID_LIST -> . ID ID_LIST_AUX
    (12) ID_LIST -> . MULTIDIMENSIONAL ID_LIST_AUX
    (18) MULTIDIMENSIONAL -> . ID LBRACKET CTEI RBRACKET
    (19) MULTIDIMENSIONAL -> . ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET

    ID              shift and go to state 24

    ID_LIST                        shift and go to state 23
    MULTIDIMENSIONAL               shift and go to state 25

state 22

    (15) FUNCTION_RULE -> FUNCTION_AUX FUNCTION ID . LPAREN PARAM RPAREN FUNCTION_BODY

    LPAREN          shift and go to state 26


state 23

    (9) VARS -> LET TYPE COLON ID_LIST . SEMICOLON VARS

    SEMICOLON       shift and go to state 27


state 24

    (11) ID_LIST -> ID . ID_LIST_AUX
    (18) MULTIDIMENSIONAL -> ID . LBRACKET CTEI RBRACKET
    (19) MULTIDIMENSIONAL -> ID . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
    (13) ID_LIST_AUX -> . COMMA ID_LIST
    (14) ID_LIST_AUX -> . empty
    (1) empty -> .

    LBRACKET        shift and go to state 29
    COMMA           shift and go to state 30
    SEMICOLON       reduce using rule 1 (empty -> .)

    ID_LIST_AUX                    shift and go to state 28
    empty                          shift and go to state 31

state 25

    (12) ID_LIST -> MULTIDIMENSIONAL . ID_LIST_AUX
    (13) ID_LIST_AUX -> . COMMA ID_LIST
    (14) ID_LIST_AUX -> . empty
    (1) empty -> .

    COMMA           shift and go to state 30
    SEMICOLON       reduce using rule 1 (empty -> .)

    ID_LIST_AUX                    shift and go to state 32
    empty                          shift and go to state 31

state 26

    (15) FUNCTION_RULE -> FUNCTION_AUX FUNCTION ID LPAREN . PARAM RPAREN FUNCTION_BODY
    (20) PARAM -> . TYPE ID PARAM_AUX
    (21) PARAM -> . empty
    (6) TYPE -> . INT
    (7) TYPE -> . FLOAT
    (8) TYPE -> . CHAR
    (1) empty -> .

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    RPAREN          reduce using rule 1 (empty -> .)

    PARAM                          shift and go to state 33
    TYPE                           shift and go to state 34
    empty                          shift and go to state 35

state 27

    (9) VARS -> LET TYPE COLON ID_LIST SEMICOLON . VARS
    (9) VARS -> . LET TYPE COLON ID_LIST SEMICOLON VARS
    (10) VARS -> . empty
    (1) empty -> .

    LET             shift and go to state 6
    VOID            reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    CHAR            reduce using rule 1 (empty -> .)
    MAIN            reduce using rule 1 (empty -> .)
    LCURLY          reduce using rule 1 (empty -> .)

    VARS                           shift and go to state 36
    empty                          shift and go to state 7

state 28

    (11) ID_LIST -> ID ID_LIST_AUX .

    SEMICOLON       reduce using rule 11 (ID_LIST -> ID ID_LIST_AUX .)


state 29

    (18) MULTIDIMENSIONAL -> ID LBRACKET . CTEI RBRACKET
    (19) MULTIDIMENSIONAL -> ID LBRACKET . CTEI RBRACKET LBRACKET CTEI RBRACKET

    CTEI            shift and go to state 37


state 30

    (13) ID_LIST_AUX -> COMMA . ID_LIST
    (11) ID_LIST -> . ID ID_LIST_AUX
    (12) ID_LIST -> . MULTIDIMENSIONAL ID_LIST_AUX
    (18) MULTIDIMENSIONAL -> . ID LBRACKET CTEI RBRACKET
    (19) MULTIDIMENSIONAL -> . ID LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET

    ID              shift and go to state 24

    ID_LIST                        shift and go to state 38
    MULTIDIMENSIONAL               shift and go to state 25

state 31

    (14) ID_LIST_AUX -> empty .

    SEMICOLON       reduce using rule 14 (ID_LIST_AUX -> empty .)


state 32

    (12) ID_LIST -> MULTIDIMENSIONAL ID_LIST_AUX .

    SEMICOLON       reduce using rule 12 (ID_LIST -> MULTIDIMENSIONAL ID_LIST_AUX .)


state 33

    (15) FUNCTION_RULE -> FUNCTION_AUX FUNCTION ID LPAREN PARAM . RPAREN FUNCTION_BODY

    RPAREN          shift and go to state 39


state 34

    (20) PARAM -> TYPE . ID PARAM_AUX

    ID              shift and go to state 40


state 35

    (21) PARAM -> empty .

    RPAREN          reduce using rule 21 (PARAM -> empty .)


state 36

    (9) VARS -> LET TYPE COLON ID_LIST SEMICOLON VARS .
